@@ -1,3 +1,6 @@
+2002-03-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* gamewin.cc: also display name when showing NPC numbers
+
 2002-03-23  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* exult.cc: 'Paint' mode implemented.  Tile grid is shown on
